--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -6,14 +6,14 @@
     height: 100vh;
     top: 0;
     left: 0;
+    z-index: 99999;
   }
    
   .box {
     position: relative;
     width: 70%;
     margin: 0 auto;
-    height: auto;
-    max-height: 70vh;
+    height: 950px;
     margin-top: calc(100vh - 85vh - 20px);
     background: #fff;
     border-radius: 4px;
